# ggg

./: Cargo.toml  README.md  i am incapable of remembering my plans for things, so i'll write them down here.md
src/: lib.rs  main.rs  structs.rs  ui.rs
