[package]
name = "ggg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["cargo"] }
regex = "1.6.0"
reqwest = "0.11.12"
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
text_io = "0.1.12"
tokio = { version = "1.21.2", features = ["full"] }
yansi = "0.5.1"

[dependencies.iced]
version = "0.5.2"
features = ["image", "debug", "tokio"]
